--- a/EsempiSpringMVC/pom.xml
+++ b/EsempiSpringMVC/pom.xml
@@ -16,6 +16,13 @@
     	<scope>provided</scope>
     </dependency>
     
+        <dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.1.0.Final</version>
+    <scope>compile</scope>
+</dependency>
+    
      <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 <dependency>
     <groupId>org.springframework</groupId>
